public_html/2015/secret-solution/93/201/source/compile
source.c: In function ‘main’:
source.c:7:6: error: conflicting types for ‘a’
  int a[n][n];
      ^
source.c:5:22: note: previous declaration of ‘a’ was here
  int n, i, j, sum=0, a;
                      ^
source.c:13:8: warning: assignment makes integer from pointer without a cast
    sum += a;
        ^
